chore: 修改环境变量和.gitignore文件

--- a/main/.env.production
+++ b/main/.env.production
@@ -1,2 +1,3 @@
-VUE_APP_SUB_VUE=//115.190.186.182/subapp/sub-vue/
-VUE_APP_SUB_REACT=//115.190.186.182/subapp/sub-react/
+VUE_APP_SUB_VUE=//ducrong.com/subapp/sub-vue/
+VUE_APP_SUB_REACT=//ducrong.com/subapp/sub-react/
+VUE_APP_PUBLIC_URL=/qiankun
