--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build:sub-react": "cd sub-react && npm run build",
     "build:sub-vue": "cd sub-vue && npm run build",
     "build:main": "cd main && npm run build",
+    "deploy": "bash ./scripts/deploy.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
