--- a/main/.env.production
+++ b/main/.env.production
@@ -1,3 +1,3 @@
-VUE_APP_SUB_VUE=//ducrong.com/subapp/sub-vue/
-VUE_APP_SUB_REACT=//ducrong.com/subapp/sub-react/
+VUE_APP_SUB_VUE=//ducrong.com/qiankun/subapp/sub-vue/
+VUE_APP_SUB_REACT=//ducrong.com/qiankun/subapp/sub-react/
 VUE_APP_PUBLIC_URL=/qiankun
