--- a/main/package.json
+++ b/main/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.6.5",
     "nprogress": "^0.2.0",
     "qiankun": "^2.0.22",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
