--- a/main/.env.development
+++ b/main/.env.development
@@ -1,2 +1,3 @@
 VUE_APP_SUB_VUE=//localhost:7777/qiankun/subapp/sub-vue/
 VUE_APP_SUB_REACT=//localhost:7788/qiankun/subapp/sub-react/
+VUE_APP_PUBLIC_URL=/qiankun/main-app
